<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="alli.bellevue.com.foreverfitness.summary"
    android:orientation="horizontal"
    android:background="@drawable/oo">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margintop"
                android:layout_marginBottom="@dimen/marginbottom"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/textview_width"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize"
                    android:text="@string/currentweight" />
                <EditText
                    android:id="@+id/currentweight"
                    android:layout_width="@dimen/layout_view_width"
                    android:hint="@string/in_kgs"
                    android:inputType="number"
                    style="@style/editext_style"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margintop"
                android:layout_marginBottom="@dimen/marginbottom"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/textview_width"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize"
                    android:text="@string/date_entry"/>
                <EditText
                    android:id="@+id/date"
                    android:layout_width="@dimen/layout_view_width"

                    android:inputType="date"
                    style="@style/editext_style"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margintop"
                android:layout_marginBottom="@dimen/marginbottom"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/textview_width"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize"
                    android:text="@string/Pic"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margintop"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageview"
                        android:layout_width="160dp"
                        android:layout_height="150dp"
                        android:src="@drawable/sampleimage"
                        android:contentDescription="image" />
                    <Button
                        android:id="@+id/capture"
                        android:layout_height="wrap_content"
                        android:layout_width="@dimen/layout_view_width"
                        android:textColor="@color/black"
                        android:onClick="capture"
                        android:text="@string/take_pic"
                        />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margintop"
            android:layout_marginBottom="@dimen/marginbottom"
            android:gravity="bottom|center"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/textsize"
                android:text="@string/SaveButton"
                android:layout_gravity="right"/>
            <Button
                android:id="@+id/button_cancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"

                android:textStyle="bold"
                android:textSize="@dimen/textsize"
                android:text="Cancel"
                android:layout_gravity="left"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>